fixed index overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,7 @@ a:active {
   width: 100vw;
   height: 100vh;
   z-index: 2;
+  overflow-y: hidden;
 }
 
 
